--- a/articles/styles.css
+++ b/articles/styles.css
@@ -17,7 +17,7 @@
 .demo-ribbon {
   width: 100%;
   height: 40vh;
-  background-color: #3F51B5;
+  background-color:	rgb(33,150,243);
   -webkit-flex-shrink: 0;
       -ms-flex-negative: 0;
           flex-shrink: 0;
@@ -31,6 +31,7 @@
 }
 
 .demo-header .mdl-layout__header-row {
+  color: inherit;
   padding-left: 40px;
 }
 
